<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_Kapak"
                android:layout_width="match_parent"
                android:layout_height="@dimen/kapak_boyut"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView_OyuncuAdi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/oyuncu_adi"
                android:textColor="@color/color_Purple"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_OyuncuBoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/boy"
                android:textColor="@color/color_Purple"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Boy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/text_size"
                tools:text="Boy" />

            <TextView
                android:id="@+id/textView_OyuncuKilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/kilo"
                android:textColor="@color/color_Purple"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Kilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/text_size"
                tools:text="Kilo" />

            <TextView
                android:id="@+id/textView_Draft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/draft_Tarihi"
                android:textColor="@color/color_Purple"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_DraftTarihi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/text_size"
                tools:text="DraftTarihi" />

            <TextView
                android:id="@+id/textView_OyuncuhkAciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/aciklama"
                android:textColor="@color/color_Purple"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Aciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/text_size"
                tools:text="Aciklama" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>